# reproduce-rust-130139

./: Cargo.toml  README.md  rust-toolchain.toml  test.sh  workaround.patch
.cargo/: config.toml
crates/bar_util/: Cargo.toml
crates/bar_util/src/: lib.rs
crates/foo_util/: Cargo.toml
crates/foo_util/src/: lib.rs
crates/hub_util/: Cargo.toml
crates/hub_util/src/: lib.rs
